--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "prettier": "^2.8.7",
         "prettier-plugin-twig-melody": "^0.4.6",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.62.0",
+        "sass-loader": "^13.2.2",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.13.3",
         "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
