--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress",
-        "php-server": "php -S localhost:8888 -t public"
+        "php-server": "php bin/console cache:clear && php -S localhost:8888 -t public"
     }
 }
