--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
+        "@prettier/plugin-php": "^0.19.4",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
         "core-js": "^3.23.0",
-        "prettier": "^2.8.7",
+        "prettier": "^2.8.8",
         "prettier-plugin-twig-melody": "^0.4.6",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.62.0",
