--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.1.*",
+        "symfony/var-dumper": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*"
     },
     "config": {
