--- a/composer.json
+++ b/composer.json
@@ -107,7 +107,8 @@
             "@csfix:dry",
             "@phpmd",
             "@phpstan"
-        ]
+        ],
+        "phpdoc": "tools/phpdoc/phpdoc"
     },
     "conflict": {
         "symfony/symfony": "*"
