--- a/composer.json
+++ b/composer.json
@@ -109,7 +109,8 @@
             "@phpstan"
         ],
         "phpdoc": "tools/phpdoc/phpdoc",
-        "phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit"
+        "phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit",
+        "phpunit-run": "vendor/bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
