--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,10 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.39",
+        "phpmd/phpmd": "^2.14",
+        "phpmetrics/phpmetrics": "^2.8",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
@@ -99,10 +103,10 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "csfix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer --config=.php-cs-fixer.dist.php fix src tests",
-        "csfix:dry": "tools/php-cs-fixer/vendor/bin/php-cs-fixer --config=.php-cs-fixer.dist.php fix src tests --dry-run -v",
-        "phpmd": "tools/phpmd/vendor/bin/phpmd . text phpmd.xml || true",
-        "phpstan": "tools/phpstan/vendor/bin/phpstan || true",
+        "csfix": "vendor/bin/php-cs-fixer --config=.php-cs-fixer.dist.php fix src tests",
+        "csfix:dry": "vendor/bin/php-cs-fixer --config=.php-cs-fixer.dist.php fix src tests --dry-run -v",
+        "phpmd": "vendor/bin/phpmd . text phpmd.xml || true",
+        "phpstan": "vendor/bin/phpstan || true",
         "lint": [
             "@csfix:dry",
             "@phpmd",
